# docs/swagger.yaml
@@ -1,22 +1,9 @@
 info:
   contact: {}
 paths:
-  /api/record/last:
+  /api/records:
     get:
-      description: Gets the last record from records for given user id and substance
-        id, if no substance id provided, gets last record for all substances
-      parameters:
-      - description: ID of the user to retrieve last record
-        in: query
-        name: userId
-        required: true
-        type: string
-      - description: value of the substance
-        in: query
-        name: substance
-        type: string
       produces:
-      - application/json
       - application/json
       responses:
         "200":
@@ -24,14 +11,13 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: gets last record for given user
+      summary: gets all records
       tags:
       - record
-  /api/substance/all:
+  /api/substances:
     get:
-      description: Gets al substances that are by default accessible to user
+      description: Gets all substances that are by default accessible to user
       produces:
-      - application/json
       - application/json
       responses:
         "200":
@@ -42,11 +28,23 @@ paths:
       summary: gets all substances from db
       tags:
       - substance
-  /api/user:
+  /api/substances/{id}:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: get substance by id
+      tags:
+      - substance
+  /api/users:
     get:
       description: Gets the basic info about every user
       produces:
-      - application/json
       - application/json
       responses:
         "200":
@@ -71,7 +69,7 @@ paths:
       summary: updates user with incoming json struct
       tags:
       - user
-  /api/user/{id}:
+  /api/users/{id}:
     get:
       description: Gets the basic user info by their id
       parameters:
@@ -92,7 +90,7 @@ paths:
       summary: gets user by id
       tags:
       - user
-  /api/user/{id}/records:
+  /api/users/{id}/records:
     get:
       parameters:
       - description: Account ID
@@ -112,7 +110,7 @@ paths:
       summary: get all records of user
       tags:
       - user
-  /api/user/{id}/records/last:
+  /api/users/{id}/records/last:
     get:
       parameters:
       - description: Account ID
@@ -132,13 +130,13 @@ paths:
       summary: get last record of given user
       tags:
       - user
-  /api/user_discord:
+  /api/users/discord_id/{discord_id}:
     get:
       description: Gets the basic user info by their discord id
       parameters:
-      - description: ID of the user to retrieve
-        in: query
-        name: discordId
+      - description: Discord ID of wanted user
+        in: path
+        name: discord_id
         required: true
         type: string
       produces:
